fix: snapshot approved regions at construction